# graph-compress

./: .gitignore  README.md  big_test.py  pyproject.toml  setup.py
.github/workflows/: python-tests.yml
graphcompress/: builders.py  builders_2.py  make_subsets.py  maxEdgeSize.py  parsers.py
graphcompress/builders/: compress_graph.py  index_graph.py
graphpress/: readers.py
tests/: test_all.py  test_all_2.py
tests/data/: little.nt
