[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-compress"
version = "1.1.0"
authors = [
  { name="TinSlim"},
  { name="pabtorres"}
]
description = "Library designed to compress graphs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TinSlim/graph-compress"
Issues = "https://github.com/TinSlim/graph-compress/issues"